--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,102 +10,100 @@
         android:id="@+id/gridLayout"
         android:layout_width="368dp"
         android:layout_height="368dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         android:background="@drawable/board"
-        app:columnCount="3"
+        android:columnCount="3"
+        android:rowCount="3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:rowCount="3">
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/image1"
+            android:id="@+id/imageView1"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_margin="10dp"
-            android:onClick="dropIN"
+            android:onClick="dropIn"
             android:tag="0" />
 
         <ImageView
-            android:id="@+id/image2"
+            android:id="@+id/imageView2"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_margin="10dp"
             android:layout_marginLeft="17dp"
-            android:onClick="dropIN"
-            android:tag="1"
-            app:layout_column="1"
-            app:layout_row="0" />
+            android:onClick="dropIn"
+            android:tag="1" />
 
         <ImageView
-            android:id="@+id/image3"
+            android:id="@+id/imageView3"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_margin="10dp"
             android:layout_marginLeft="12dp"
-            android:onClick="dropIN"
+            android:onClick="dropIn"
             android:tag="2" />
 
         <ImageView
-            android:id="@+id/image4"
+            android:id="@+id/imageView4"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_margin="10dp"
             android:layout_marginTop="13dp"
-            android:onClick="dropIN"
+            android:onClick="dropIn"
             android:tag="3" />
 
         <ImageView
-            android:id="@+id/image5"
+            android:id="@+id/imageView5"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_margin="10dp"
             android:layout_marginLeft="17dp"
             android:layout_marginTop="13dp"
-            android:onClick="dropIN"
+            android:onClick="dropIn"
             android:tag="4" />
 
         <ImageView
-            android:id="@+id/image6"
+            android:id="@+id/imageView6"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_margin="10dp"
             android:layout_marginLeft="12dp"
             android:layout_marginTop="13dp"
-            android:onClick="dropIN"
+            android:onClick="dropIn"
             android:tag="5" />
 
         <ImageView
-            android:id="@+id/image7"
+            android:id="@+id/imageView7"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_margin="10dp"
             android:layout_marginTop="16dp"
-            android:onClick="dropIN"
+            android:onClick="dropIn"
             android:tag="6" />
 
         <ImageView
-            android:id="@+id/image8"
+            android:id="@+id/imageView8"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_margin="10dp"
             android:layout_marginLeft="17dp"
             android:layout_marginTop="16dp"
-            android:onClick="dropIN"
+            android:onClick="dropIn"
             android:tag="7" />
 
         <ImageView
-            android:id="@+id/image9"
+            android:id="@+id/imageView9"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_margin="10dp"
             android:layout_marginLeft="12dp"
             android:layout_marginTop="16dp"
-            android:onClick="dropIN"
+            android:onClick="dropIn"
             android:tag="8" />
 
     </androidx.gridlayout.widget.GridLayout>
@@ -114,9 +112,9 @@
         android:id="@+id/winnerTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="163dp"
         android:layout_marginStart="163dp"
         android:layout_marginTop="4dp"
-        android:layout_marginEnd="163dp"
         android:text="TextView"
         android:textSize="20sp"
         android:visibility="invisible"
@@ -128,11 +126,11 @@
         android:id="@+id/playAgainButton"
         android:layout_width="wrap_content"
         android:layout_height="51dp"
-        android:text="Play Again"
         android:onClick="playAgain"
+        android:text="Play Again"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/winnerTextView" />
+        app:layout_constraintTop_toBottomOf="@id/winnerTextView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
